fixed font size, spacing n stuff

--- a/Project1Fi/css/gallery.css
+++ b/Project1Fi/css/gallery.css
@@ -191,14 +191,21 @@ body {
 }
 
 .intro{
+  transform: translateY(30%);
   text-align: center;
   margin: 20px;
   padding: 20px;
 }
 
 .intro h1{
-      font-family: 'Brandon Grotesque';
-      font-size: 60px;
+  font-family: 'Brandon Grotesque';
+  font-size: 60px;
+}
+
+.intro h2{
+  transform: translateY(-60%);
+  font-family: 'Brandon Grotesque';
+  font-size: 40px;
 }
 
 .intro p{
@@ -278,13 +285,13 @@ body {
     font-family: Brandon Grotesque;
     margin: 0;
     padding: 0;
-    font-size: 20px;
+    font-size: 30px;
     color: rgb(22, 44, 58);
 }
 
 .container .box .details .content p {
     font-family: fauna one;
-    font-size: 11px;
+    font-size: 14px;
     margin: 10px 0 0;
     padding: 0;
 }
